メイン画像のアドレスを変更

--- a/assessment.html
+++ b/assessment.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="assessment.css">
 </head>
 <body>
-  <img src="ChaAndShiroSweets.jpg" alt="sweets"> 
+  <img src="https://raw.githubusercontent.com/a2k3ine/sweets/baa7d97cc60fd22269e3f29c25744b32d7b8cce6/ChaAndShiroSweets.jpg" alt="sweets"> 
 
   <h1>今日のラッキースイーツは？</h1>
   <p>今日の日付を選んで診断ボタンを押してください。</p>
